# gozumol

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo_assistant.py
gozumol/: __init__.py
gozumol/core/: __init__.py  assistant.py  model.py  utils.py
gozumol/prompts/: __init__.py  templates.py
notebooks/: colab_test.ipynb  phi4_multimodal_test.ipynb  qwen2_vl_test.ipynb
